--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ Pillow
 cython
 matplotlib
 scikit-image
-tensorflow==1.15.2
+tensorflow<=1.15.2
 protobuf==3.20
-keras==2.2.4
+keras<=2.2.4
 opencv-python
 h5py
 imgaug
